# bachoc

./: .env.example  .gitignore  README.md  academic_profiles.jsonld  academic_profiles.ttl  convert.py  convert_to_text.py  create_graph.py  kg.db  lab.ipynb  new_entities.csv  new_relationship.csv  new_relationship_v1.0.csv  new_relationship_v2.0.csv  new_sample_entities.json  new_triples.json  new_triples_v1.0.json  new_triples_v2.0.json  pyproject.toml  relationships.csv  requirements.txt  result.txt  sample_data.json  scrape.py  triples.json
convert_data_to_kg/: build_rdf.py
convert_pdf_to_text/: core.py
data/: (16844277137145_29_06_2024_20_12)do-van-chien-1980-11-17-1719666757.txt  (16879491024946_28_06_2024_11_07)nguyen-thuong-nghia-1964-01-01-1719547648.txt  (17191314786197_30_06_2024_20_04)nguyen-van-tuan-1975-11-18-1719752669.txt  (17193813255334_29_06_2024_21_44)nguyen-thi-khanh-van-1969-09-02-1719672266.txt  (17195435618812_29_06_2024_07_16)nguyen-thi-trang-nhung-1979-12-01-1719620179.txt  (17196301945253_29_06_2024_10_15)tran-quoc-hoa-1976-07-24-1719630937.txt  entity.index  predicate.index
docs/: pipeline.md
output/: do-van-chien.json  neo4j.ipynb  nguyen-thi-khanh-van.json  nguyen-thuong-nghia.json  nguyen-van-tuan.json  table_triples_1.json  triples_1.json  triples_2.json  triples_3.json  triples_4.json
pgvector_ini/: docker-compose.yaml
src/: models.py  page_text.json  run.py  test_triple_data_0.json  test_triple_data_1.json  test_triple_data_2.json  test_triple_section_1  test_triple_section_1.json  test_triple_section_1_1.json  (+6 more)
(+54 files in other folders)
